# pico_display

./: .gitignore  BleDescriptors.h  BtStackManager.cpp  BtStackManager.h  CMakeLists.txt  DEVELOPER_NOTES.md  DemoController.h  HidDevice.cpp  HidKeyboard.cpp  HidKeyboard.h  I_HidKeyboardHandler.h  KeyboardLayout.h  MediaApplication.cpp  MediaControllerDevice.cpp  MediaControllerDevice.h  README.md  RotaryEncoder.cpp  RotaryEncoder.h  StdinController.cpp  config.py  display_manager.py  hog_keyboard_demo.cpp  host_controller.py  keyboard_main.cpp  media_controller.gatt  media_main.cpp  pico_sdk_import.cmake  picow_bt_example_common.cpp  picow_bt_example_common.h  pio_rotary_encoder.pio  setup_pico_env.bat  ui_generator.py  verify_tcp_transfer.py  weather.py
cmake/: GattUtils.cmake
config/: btstack_config.h  config.h  lwipopts.h  private_config.h
include/: BleDescriptors.h  BtStackManager.h  CustomFont.h  Display.h  Drawing.h  HidDevice.h  HidReport.h  I_BtStackHandler.h  I_InputController.h  KeyboardLayout.h  MediaApplication.h  MediaControllerDevice.h  RotaryEncoder.h  StdinController.h  font_freesans_16.h  test_img.h
include/ble/: FileTransferService.h
include/media/: MediaApplication.h  MediaControllerDevice.h
include/net/: FrameDispatcher.h  FrameProtocol.h  TcpServer.h
scripts/: config.py  display_manager.py  image_converter.py  ui_generator.py
src/bt/: BtStackManager.cpp
src/display/: Display.cpp  Drawing.cpp  st7789_lcd.pio
src/hid/: HidDevice.cpp
src/keyboard/: DemoController.cpp  KeyboardLayout.cpp  StdinController.cpp
src/media/: MediaApplication.cpp  MediaControllerDevice.cpp  file_transfer_service.gatt  media_controller.gatt  media_main.cpp
src/net/: TcpServer.cpp
src/pico/: RotaryEncoder.cpp  WifiConfig.h  picow_bt_example_background.cpp
tools/: generate_font.py
web/: index.html
